// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationExecutionManager Cobuild logging logs cobuilt operations correctly with --timeline option 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 2 operations:
",
  },
  Object {
    "kind": "O",
    "text": "  operation (success)
",
  },
  Object {
    "kind": "O",
    "text": "  operation2 (success)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]operation2 (success)[default] [gray]]========================================[[default][white]🔄 1 ⏳️ 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "✅️ [green]\\"operation2 (success)\\" completed successfully in 15.00 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]operation (success)[default] [gray]]=========================================[[default][white]🔄 1 ✅️ 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "✅️ [green]\\"operation (success)\\" completed successfully in 15.00 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "==========================================================================================
",
  },
  Object {
    "kind": "O",
    "text": "[cyan]operation2 (success)[default] [gray][default][green]CCCCCCCCCCCCCCCCCCCCCCCCCCC[default][gray]------------------------------------[default] [white]15.0s[default]
",
  },
  Object {
    "kind": "O",
    "text": "[cyan] operation (success)[default] [gray]-----------------------------------[default][green]CCCCCCCCCCCCCCCCCCCCCCCCCCCC[default][gray][default] [white]15.0s[default]
",
  },
  Object {
    "kind": "O",
    "text": "==========================================================================================
",
  },
  Object {
    "kind": "O",
    "text": "LEGEND:                                                                  Total Work: 20.0s
",
  },
  Object {
    "kind": "O",
    "text": "  [#] Success  [!] Failed/warnings  [%] Skipped/cached/no-op             Wall Clock: 35.0s
",
  },
  Object {
    "kind": "O",
    "text": "  [C] Cobuild                                                      Max Parallelism Used: 1
",
  },
  Object {
    "kind": "O",
    "text": "                                                                 Avg Parallelism Used: 0.6
",
  },
  Object {
    "kind": "O",
    "text": "BY PHASE:
",
  },
  Object {
    "kind": "O",
    "text": "  [cyan]         my-name[default] 30.0s, from cache: 20.0s
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]✅️ [green]SUCCESS: 2 operations[default] [gray]]===================================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "These operations completed successfully:
",
  },
  Object {
    "kind": "O",
    "text": "  operation (success)     15.00 seconds (restore 10000.0ms)
",
  },
  Object {
    "kind": "O",
    "text": "  operation2 (success)    15.00 seconds (restore 10000.0ms)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
]
`;

exports[`OperationExecutionManager Cobuild logging logs warnings correctly with --timeline option 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 2 operations:
",
  },
  Object {
    "kind": "O",
    "text": "  operation (success with warnings)
",
  },
  Object {
    "kind": "O",
    "text": "  operation2 (success with warnings)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]operation2 (success with warnings)[default] [gray]]==========================[[default][white]🔄 1 ⏳️ 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "⚡️ [yellow]\\"operation2 (success with warnings)\\" completed with warnings in 15.00 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]operation (success with warnings)[default] [gray]]===========================[[default][white]⚡️ 1 🔄 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "⚡️ [yellow]\\"operation (success with warnings)\\" completed with warnings in 15.00 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "==========================================================================================
",
  },
  Object {
    "kind": "O",
    "text": "[cyan]operation2 (success with warnings)[default] [gray][default][yellow]CCCCCCCCCCCCCCCCCCCCC[default][gray]----------------------------[default] [white]15.0s[default]
",
  },
  Object {
    "kind": "O",
    "text": "[cyan] operation (success with warnings)[default] [gray]---------------------------[default][yellow]CCCCCCCCCCCCCCCCCCCCCC[default][gray][default] [white]15.0s[default]
",
  },
  Object {
    "kind": "O",
    "text": "==========================================================================================
",
  },
  Object {
    "kind": "O",
    "text": "LEGEND:                                                                  Total Work: 20.0s
",
  },
  Object {
    "kind": "O",
    "text": "  [#] Success  [!] Failed/warnings  [%] Skipped/cached/no-op             Wall Clock: 35.0s
",
  },
  Object {
    "kind": "O",
    "text": "  [C] Cobuild                                                      Max Parallelism Used: 1
",
  },
  Object {
    "kind": "O",
    "text": "                                                                 Avg Parallelism Used: 0.6
",
  },
  Object {
    "kind": "O",
    "text": "BY PHASE:
",
  },
  Object {
    "kind": "O",
    "text": "  [cyan]         my-name[default] 30.0s, from cache: 20.0s
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]⚡️ [yellow]SUCCESS WITH WARNINGS: 2 operations[default] [gray]]=====================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]⚡️ [yellow]WARNING: operation (success with warnings)[default] [gray]]------------[[default] [white]15.00 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]⚡️ [yellow]WARNING: operation2 (success with warnings)[default] [gray]]-----------[[default] [white]15.00 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[yellow]Operations succeeded with warnings.
[default]
",
  },
]
`;

exports[`OperationExecutionManager Error logging printedStderrAfterError 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 operation:
",
  },
  Object {
    "kind": "O",
    "text": "  stdout+stderr
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]stdout+stderr[default] [gray]]====================================================[[default][white]🔄 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "E",
    "text": "Error: step 1 failed

",
  },
  Object {
    "kind": "E",
    "text": "❌️ [red]\\"stdout+stderr\\" failed to build.[default]
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]❌️ [red]FAILURE: 1 operation[default] [gray]]====================================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]❌️ [red]FAILURE: stdout+stderr[default] [gray]]---------------------------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[red]Operations failed.
[default]
",
  },
]
`;

exports[`OperationExecutionManager Error logging printedStdoutAfterErrorWithEmptyStderr 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 operation:
",
  },
  Object {
    "kind": "O",
    "text": "  stdout only
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]stdout only[default] [gray]]======================================================[[default][white]🔄 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Error: step 1 failed

",
  },
  Object {
    "kind": "E",
    "text": "❌️ [red]\\"stdout only\\" failed to build.[default]
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]❌️ [red]FAILURE: 1 operation[default] [gray]]====================================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]❌️ [red]FAILURE: stdout only[default] [gray]]-----------------------------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[red]Operations failed.
[default]
",
  },
]
`;

exports[`OperationExecutionManager Warning logging Fail on warning Logs warnings correctly 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 operation:
",
  },
  Object {
    "kind": "O",
    "text": "  success with warnings (failure)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]success with warnings (failure)[default] [gray]]==================================[[default][white]🔄 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "⚡️ [yellow]\\"success with warnings (failure)\\" completed with warnings in 0.10 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]⚡️ [yellow]SUCCESS WITH WARNINGS: 1 operation[default] [gray]]======================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]⚡️ [yellow]WARNING: success with warnings (failure)[default] [gray]]---------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "E",
    "text": "[yellow]Operations succeeded with warnings.
[default]
",
  },
]
`;

exports[`OperationExecutionManager Warning logging Success on warning Logs warnings correctly 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 operation:
",
  },
  Object {
    "kind": "O",
    "text": "  success with warnings (success)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]success with warnings (success)[default] [gray]]==================================[[default][white]🔄 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "⚡️ [yellow]\\"success with warnings (success)\\" completed with warnings in 0.10 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]⚡️ [yellow]SUCCESS WITH WARNINGS: 1 operation[default] [gray]]======================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]⚡️ [yellow]WARNING: success with warnings (success)[default] [gray]]---------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
]
`;

exports[`OperationExecutionManager Warning logging Success on warning logs warnings correctly with --timeline option 1`] = `
Array [
  Object {
    "kind": "O",
    "text": "Selected 1 operation:
",
  },
  Object {
    "kind": "O",
    "text": "  success with warnings (success)
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Executing a maximum of 1 simultaneous processes...
",
  },
  Object {
    "kind": "O",
    "text": "Legend:
",
  },
  Object {
    "kind": "O",
    "text": "❌️ FAILURE
",
  },
  Object {
    "kind": "O",
    "text": "⚡️ SUCCESS WITH WARNINGS
",
  },
  Object {
    "kind": "O",
    "text": "🔄 EXECUTING
",
  },
  Object {
    "kind": "O",
    "text": "⏳️ WAITING / QUEUED / READY
",
  },
  Object {
    "kind": "O",
    "text": "🚧 BLOCKED
",
  },
  Object {
    "kind": "O",
    "text": "✅️ SUCCESS
",
  },
  Object {
    "kind": "O",
    "text": "📦 FROM CACHE / SKIPPED
",
  },
  Object {
    "kind": "O",
    "text": "
[gray]==[[default] [cyan]success with warnings (success)[default] [gray]]==================================[[default][white]🔄 1[default][gray]]==[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "Build step 1

",
  },
  Object {
    "kind": "O",
    "text": "Warning: step 1 succeeded with warnings

",
  },
  Object {
    "kind": "E",
    "text": "⚡️ [yellow]\\"success with warnings (success)\\" completed with warnings in 0.10 seconds.[default]
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "==========================================================================================
",
  },
  Object {
    "kind": "O",
    "text": "[cyan]success with warnings (success)[default] [gray][default][yellow]!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!![default][gray][default] [white]0.1s[default]
",
  },
  Object {
    "kind": "O",
    "text": "==========================================================================================
",
  },
  Object {
    "kind": "O",
    "text": "LEGEND:                                                                   Total Work: 0.1s
",
  },
  Object {
    "kind": "O",
    "text": "  [#] Success  [!] Failed/warnings  [%] Skipped/cached/no-op              Wall Clock: 0.1s
",
  },
  Object {
    "kind": "O",
    "text": "                                                                   Max Parallelism Used: 1
",
  },
  Object {
    "kind": "O",
    "text": "                                                                 Avg Parallelism Used: 1.0
",
  },
  Object {
    "kind": "O",
    "text": "BY PHASE:
",
  },
  Object {
    "kind": "O",
    "text": "  [cyan]           phase[default] 0.1s
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "


",
  },
  Object {
    "kind": "O",
    "text": "[gray]==[[default]⚡️ [yellow]SUCCESS WITH WARNINGS: 1 operation[default] [gray]]======================================[default]

",
  },
  Object {
    "kind": "O",
    "text": "[gray]--[[default]⚡️ [yellow]WARNING: success with warnings (success)[default] [gray]]---------------[[default] [white]0.10 seconds[default] [gray]]--[default]

",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
  Object {
    "kind": "O",
    "text": "
",
  },
]
`;
